--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,9 @@
           <a class="nav-link" routerLink="/products">Products</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/service">Products Service</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" (click)="logout()">Logout</a>
         </li>
       </ul>
