--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -10,7 +10,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let product of productData">
-        <th scope="row">{{product.id}}</th>
+        <th scope="row"><a [routerLink]="['/product', product.id]">{{product.id}}</a></th>
         <td>{{product.title}}</td>
         <td>{{product.description}}</td>
         <td>{{product.price | currency}}</td>
